fix: content layout is not centered

--- a/src/styles/common/layout.css
+++ b/src/styles/common/layout.css
@@ -1,5 +1,6 @@
 @layer components {
   .layout {
+    position: relative;
     min-height: 100dvh;
     padding-left: 10px;
     padding-right: 10px;
@@ -9,10 +10,8 @@
   @media (min-width: 768px) {
     .layout {
       display: flex;
-      flex-direction: row;
       justify-content: center;
-      padding-top: 0;
-      transform: translate(-40px, 120px);
+      padding-top: 120px;
     }
   }
 }
